# xuanzhao

./: .gitignore  DEMO.md  Makefile  README.md  README_EN.md  SKILL.md  app.py  cron_fetch.py  debate_engine.py  install.sh  multi_metaphysics.py  perspectives_engine.py  perspectives_templates.py  pyproject.toml  setup.py  xuanzhao.py
.github/workflows/: ci.yml
bazi-reverse/: README.md  SKILL.md  debate_template.md  reverse-algorithm.md
bazi-reverse/scripts/: reverse_bazi.py
data/: gen1.py  perspectives.yaml  perspectives.yaml.bak  prompt_perspectives.yaml  tiaohou.yaml  wuxing.yaml
data/exp_parts/: chentuan.json  guiguzi.json  hanfei.json  kongzi.json  laozi.json  lixuzhong.json  mencius.json  mozhu.json  rentieqiao.json  shangyang.json  shaoyong.json  shenxiaoshen.json  wangyangming.json  wanminying.json  weilianli.json  xunzi.json  xuziping.json  yuanshushan.json  zhuangzi.json
data/knowledge_base/: bazi.yaml  shensha.yaml  ziwei.yaml
docs/: architecture.md
engine/: SKILL.md
frontend/: index.html
perspectives/aristotle-perspective/: SKILL.md
perspectives/crowley-perspective/: SKILL.md
perspectives/gui-gu-zi-perspective/: SKILL.md
perspectives/hermes-trismegistus-perspective/: SKILL.md
perspectives/jiang-ziya-perspective/: SKILL.md
perspectives/jung-perspective/: SKILL.md
scripts/: inject_souls.py  predict.py
templates/: error.html  index.html  result.html
tests/: conftest.py  test_bazi.py  test_cli.py  test_perspectives.py  test_reverse_bazi.py
xuanzhao/: __init__.py  __main__.py  analyzer.py  cli.py
xuanzhao/perspectives/: base.py  (+23 more)
(+18 files in other folders)
